Hocam buda css kullanarak arka plan ve yazı değişimi JS içindeki kısımları yorum olarak çıkardım.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+  <style> tbody :hover {
+          background-color:#008000;
+          color:#FFFFFF;} 
+  </style>
 </head>
 <body>
     <table id="petsTable">
@@ -13,6 +17,7 @@
                 <th>Legs</th>
                 <th>Action</th>
             </tr>
+          
         </thead>
         <tbody>
         </tbody>
